buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            name = "sonatype"
            url = "https://oss.sonatype.org/content/repositories/snapshots/"
        }
        maven {
            name = "forge"
            url = "http://files.minecraftforge.net/maven"
        }
        maven {
            name = 'sponge'
            url = 'http://repo.spongepowered.org/maven'
        }
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:' + project.forgeGradleVersion
        classpath 'org.spongepowered:mixingradle:0.5-SNAPSHOT'
    }
}

apply plugin: 'net.minecraftforge.gradle.liteloader'
apply plugin: 'org.spongepowered.mixin'
apply plugin: 'java'

def getGitHash = { ->
    def stdout = new ByteArrayOutputStream()
    exec {
        commandLine 'git', 'rev-parse', '--short', 'HEAD'
        standardOutput = stdout
    }
    return stdout.toString().trim()
}

compileJava {
    options.encoding = 'UTF-8'
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
}

version = project.version
group = "com.lion328.thaifixes"
archivesBaseName = "thaifixes"

minecraft {
    version = project.mcVersion
    mappings = project.mcMappings
    
    runDir = "run"
}

sourceSets {
    main {
        ext.refMap = "mixins.thaifixes.refmap.json"
    }
}

mixin {
    defaultObfuscationEnv notch
}

litemod {
    json {
        name = "thaifixes"
        displayName = "ThaiFixes"
        author = "lion328"
        version = project.version
        revision = getGitHash()
        mcversion = project.targetVersion
        description = "Improve Thai characters support in Minecraft"
        mixinConfigs += "mixins.thaifixes.json"
    }
}

jar {
    from litemod.outputs
}
